@@ -1,8 +1,13 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.94 2005/03/29 23:53:19 allanonjl Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.95 2005/03/30 00:52:36 agaffney Exp $
 
 *GLI-gtkfe-0.01 (11 Dec 2004)
+
+  29 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
+  Added code to detect when the output logfile is moved and temporarily
+  disabled the done/error dialogs.
+
   29 Mar 2005; John N. Laliberte <allanonjl@gentoo.org>
   Complete overhaul of Users.py.  UI is smart, but not yet integrated
   into the backend.
